k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postservice
  template:
    metadata:
      labels:
        app: postservice
    spec:
      containers:
      - name: postservice
        image: saenthan/postservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: post-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postservice
  ports:
  - name: postservice
    protocol: TCP
    port: 80
    targetPort: 80
